--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "homepage":"https://nandhithakarthikeyini.github.io/Expense-Tracker/",
+  "homepage": "https://nandhithakarthikeyini.github.io/Expense-Tracker/",
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.1.1",
@@ -19,16 +17,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-<<<<<<< HEAD
-    
-=======
-  
->>>>>>> bc9fc6b5030f125aca762d5e413de3afd38556b1
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
